# AppleWin

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AppleWin-VS2022.sln  AppleWin-VS2022.vcxproj  AppleWin-VS2022.vcxproj.filters  AppleWinExpress2005.sln  AppleWinExpress2005.vcproj  AppleWinExpress2008.sln  AppleWinExpress2008.vcproj  AppleWinExpress2010.sln  AppleWinExpress2010.vcxproj  AppleWinExpress2010.vcxproj.filters  AppleWinExpress2012.sln  AppleWinExpress2012.vcxproj  AppleWinExpress2012.vcxproj.filters  AppleWinExpress2013.sln  AppleWinExpress2013.vcxproj  AppleWinExpress2013.vcxproj.filters  AppleWinExpress2015.sln  AppleWinExpress2015.vcxproj  AppleWinExpress2015.vcxproj.filters  AppleWinExpress2017.sln  AppleWinExpress2017.vcxproj  AppleWinExpress2017.vcxproj.filters  AppleWinExpress2019.sln  AppleWinExpress2019.vcxproj  AppleWinExpress2019.vcxproj.filters  Applewin.sln  Applewin.vcproj  Applewin.vcxproj  Applewin.vcxproj.filters  Applewin71.sln  Applewin71.vcproj  ApplewinExpress.sln  ApplewinExpress.vcproj  ApplewinExpress10.00.sln  ApplewinExpress10.00.vcxproj  (+18 more)
libyaml/: CMakeLists.txt
libyaml/src/: api.c  loader.c  scanner.c
libyaml/win32/: yaml-VS2022.vcxproj  yaml-VS2022.vcxproj.filters  yaml2008.vcproj  yaml2010.vcxproj  yaml2010.vcxproj.filters  yaml2013.vcxproj  yaml2015.vcxproj  yaml2015.vcxproj.filters  yaml2017.vcxproj  yaml2019.vcxproj  yaml2019.vcxproj.filters
minizip/: CMakeLists.txt  README  crypt.h  ioapi.c  ioapi.h  iowin32.c  iowin32.h  mztools.c  unzip.c  unzip.h  zip.c  zip.h  zip_VS2022.vcxproj  zip_VS2022.vcxproj.filters  zip_lib2019.vcxproj  zip_lib2019.vcxproj.filters
resource/: 341-0028-a.rom  Apple2.rom  Apple2_JPlus.rom  Apple2_JPlus_Video.rom  Apple2_Video.rom  Apple2e.rom  Apple2e_Enhanced_Video.rom  Applewin.psd  Applewin.rc  Base64A.rom  Base64A_German_Video.rom  CMakeLists.txt  CMakeResources.cmake  DISK2-13sector.rom  DISK2.rom  Freezes_Non-autostart_F8_Rom.rom  IMC2001-Video.rom  IMC2001.rom  MouseInterface.rom  PRAVETS82.ROM  PRAVETS8C.ROM  Parallel.rom  TK3000e.rom  TKClock.rom  ThunderClockPlus.rom  resource.h  version.h  winres.h
source/: 6522.cpp  6522.h  6821.cpp  6821.h  AY8910.cpp  AY8910.h  AppleWin.cpp  AppleWin.h  Applewin.cpp  Applewin.h  CMakeLists.txt  CPU.cpp  CPU.h  Card.cpp  Card.h  CardManager.cpp  CardManager.h  CmdLine.cpp  CmdLine.h  Common.h  CopyProtectionDongles.cpp  CopyProtectionDongles.h  Core.cpp  Core.h  DAC.cpp  DAC.h  Debug.cpp  Debug.h  Debugger_Assembler.cpp  Debugger_Assembler.h  Debugger_Console.cpp  Debugger_Console.h  Debugger_DisassemblerData.cpp  Debugger_DisassemblerData.h  Debugger_Display.cpp  Debugger_Display.h  Debugger_Help.cpp  Debugger_Parser.cpp  Debugger_Parser.h  Debugger_Symbols.cpp  (+128 more)
source/CPU/: cpu6502.h  cpu65C02.h  cpu65d02.h  cpu_general.inl  cpu_heatmap.inl  cpu_instructions.inl  cpu_readwrite.inl
source/CommonVICE/: 6510core.h  alarm.h  interrupt.h  mem.h  types.h
source/Configuration/: About.cpp  About.h  Config.cpp  Config.h  IPropertySheet.h  IPropertySheetPage.h  PageAdvanced.cpp  PageAdvanced.h  PageConfig.cpp  PageConfig.h  PageConfigTfe.cpp  PageConfigTfe.h  PageDisk.cpp  PageDisk.h  PageInput.cpp  PageInput.h  PageSlots.cpp  PageSlots.h  PageSound.cpp  PageSound.h  PropertySheet.cpp  PropertySheet.h  PropertySheetDefs.h  PropertySheetHelper.cpp  PropertySheetHelper.h
source/Debugger/: BreakpointCard.cpp  BreakpointCard.h  Debug.cpp  Debug.h  DebugDefs.h  Debugger_Assembler.cpp  Debugger_Assembler.h  Debugger_Color.cpp  Debugger_Color.h  Debugger_Commands.cpp  Debugger_Console.cpp  Debugger_Console.h  Debugger_Disassembler.cpp  Debugger_Disassembler.h  Debugger_DisassemblerData.cpp  Debugger_DisassemblerData.h  Debugger_Display.cpp  Debugger_Display.h  Debugger_Heatmap.cpp  Debugger_Heatmap.h  Debugger_Help.cpp  Debugger_Help.h  Debugger_Parser.cpp  Debugger_Parser.h  Debugger_Range.cpp  Debugger_Range.h  Debugger_Symbols.cpp  Debugger_Symbols.h  Debugger_Types.h  Debugger_Win32.cpp  Debugger_Win32.h  Util_MemoryTextFile.cpp  Util_MemoryTextFile.h  Util_Text.h
source/Gamelink/: RemoteControlManager.cpp  RemoteControlManager.h
source/RemoteControl/: Gamelink.cpp  Gamelink.h  RemoteControlManager.cpp  RemoteControlManager.h
source/Tfe/: Backend.cpp  Backend.h  Bpf.h  DNS.cpp  DNS.h  IPRaw.cpp  IPRaw.h  NetworkBackend.cpp  NetworkBackend.h  PCapBackend.cpp  PCapBackend.h  Pcap-stdinc.h  Pcap.h  README.md  Software.md  Tfe.cpp  Tfe.h  Tfearch.cpp  Tfearch.h  Tfesupp.cpp  Tfesupp.h  Types.h  Uilib.cpp  Uilib.h  tfe.cpp  tfe.h  tfearch.cpp  tfearch.h  tfesupp.cpp  tfesupp.h
source/Windows/: AppleWin.cpp  AppleWin.h  DXSoundBuffer.cpp  DXSoundBuffer.h  DirectInput.cpp  DirectVideo.cpp  DirectVideo.h  HookFilter.cpp  HookFilter.h  Win32Frame.cpp  Win32Frame.h  WinFrame.cpp  WinFrame.h  WinVideo.cpp  WinVideo.h
source/Z80/: z80.cpp  z80.h  z80daa.h  z80emu.cpp  z80io.cpp  z80io.h
source/Z80VICE/: daa.cpp  daa.h  z80.cpp  z80.h  z80mem.cpp  z80mem.h  z80regs.h
source/frontends/: .clang-format
source/gamelink/: gamelink.cpp  gamelink.h  gamelink_term.cpp
source/linux/: .clang-format  benchmark.cpp  benchmark.h  bitmap.cpp  bitmap.h  build.sh  cassettetape.cpp  cassettetape.h  config.h.in  configuration.cpp  configuration.h  context.cpp  context.h  data.cpp  data.h  dummies.cpp  dummies.h  fedora.list.txt  interface.h  msys2.md  (+40 more)
zlib/: CMakeLists.txt  README  adler32.c  compress.c  crc32.c  crc32.h  deflate.c  deflate.h  gzclose.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inffast.h  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  trees.c  uncompr.c  zconf.h  zlib-Express2005.vcproj  zlib-Express2008.vcproj  zlib-Express2010.vcxproj  zlib-Express2010.vcxproj.filters  zlib-Express2012.vcxproj  zlib-Express2012.vcxproj.filters  zlib-Express2013.vcxproj  zlib-Express2013.vcxproj.filters  zlib-Express2015.vcxproj  zlib-Express2015.vcxproj.filters  zlib-Express2017.vcxproj  zlib-Express2017.vcxproj.filters  zlib-Express2019.vcxproj  zlib-Express9.00.vcproj  zlib-Express9.00.vcxproj  zlib-VS2022.vcxproj  (+4 more)
(+782 files in other folders)
